test/SemanticAnalysis/LifetimeMethods/InvalidArgumentCountSetInvalid.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__setinvalid' has incorrect argument count
	void __setinvalid(unused int i) noexcept { }
}

// CHECK: 1 error generated.
